--- a/src/pages/restaurant/restaurant.html
+++ b/src/pages/restaurant/restaurant.html
@@ -13,6 +13,8 @@
 </ion-header>
 
 
-<ion-content padding>
-
+<ion-content>
+<ion-list>
+  <ion-item *ngFor="let store of stores | async">{{store.name}}</ion-item>
+</ion-list>
 </ion-content>
