--- a/src/pages/restaurant/restaurant.html
+++ b/src/pages/restaurant/restaurant.html
@@ -15,6 +15,11 @@
 
 <ion-content>
 <ion-list>
-  <ion-item *ngFor="let store of stores | async">{{store.name}}</ion-item>
+  <ion-item *ngFor="let store of stores | async">
+      <img src="{{store.imageData}}" alt="avatar">
+    {{store.name}}
+  </ion-item>
 </ion-list>
+
+<button ion-button full (click)="takePicture()">Take Picture</button>
 </ion-content>
